# edgeai_platform

./: LICENSE  README.md
.github/workflows/: deploy.yml
assets/: README.cn.md  index.html
deploy/: requirements.txt  run_all.py
deploy/convert/: convert_fp16.py  load_verify.py
docs/: LLM与ModelCoordinator集成.md  TTS与MeloTTS集成说明.md  YOLO与SCRFD问题排查记录.md  doc-readme.md  接续开发说明.md  模型演进与待办.md  系统架构与运行逻辑.md  适配器说明.md
model/: anchors_yolov5.txt  ppocrv4_det.rknn  ppocrv4_rec.rknn  scrfd.rknn  yolov5.rknn
model_zoo/convert/: convert_int8.py  decode_yolo.py  model_configs.py  prepare_data.py  preproc_utils.py
runtime/: CMakeLists.txt  build-linux.sh  main.cc  main.cpp
runtime/adapters/: yolo_adapter.cpp  yolo_adapter.h  yolo_postprocess.cpp  yolo_postprocess.h  yolov5.h
runtime/adapters/llm/: llm_worker.cpp  llm_worker.h  rkllm_session.cpp  rkllm_session.h
runtime/adapters/ppocr/: ppocr_adapter.cpp  ppocr_adapter.h  ppocr_system.cc  ppocr_system.h  standalone_main.cc
runtime/adapters/scrfd/: main.py  scrfd_adapter.cpp  scrfd_adapter.h  scrfd_context.h  scrfd_postprocess.cpp  scrfd_postprocess.h
runtime/adapters/yolo/: README.md  yolo_adapter.cpp  yolo_adapter.h  yolo_postprocess.cpp  yolo_postprocess.h
runtime/app/: main.cc
runtime/config/: default.yaml
runtime/engine/: adapter_interface.h  bounded_queue.h  pipeline.cpp  pipeline.h  thread_pool.cpp  thread_pool.h
runtime/io/: camera_source.cpp  camera_source.h  frame_transform.cpp  frame_transform.h
runtime/platform/: adapter_signals.h  llm_greeting.cpp  llm_greeting.h  logging.h  model_coordinator.cpp  model_coordinator.h  shared_state.h
runtime/utils/: config_parser.h  image_utils.c
runtime/viz/: display_layout.h  display_sink.h  opencv_display_sink.cpp  result_overlay.cpp  result_overlay.h
